swarm-demo-app/infra/linkerd-viz/linkerd-viz.yml
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-viz
  labels:
    name: linkerd-viz
spec:
  type: ClusterIP
  ports:
  - name: grafana
    port: 8079
    targetPort: 3000
  - name: prometheus
    port: 9191
    targetPort: 9191
  selector:
    name: linkerd-viz
