swarm-demo-app/infra/linkerd-viz/linkerd-viz-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: linkerd-viz
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: linkerd-viz
          servicePort: 8079
